testsuite/tests/linear/should_fail/LinearRole.stderr

LinearRole.hs:12:7: error:
    • Couldn't match type ‘'One’ with ‘'Many’
        arising from a use of ‘coerce’
    • In the expression: coerce x
      In an equation for ‘f’: f x = coerce x
